minor fix in username

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "objects-to-csv",
+  "name": "@piyushimraw/objects-to-csv",
   "version": "1.3.6",
   "description": "Converts an array of objects into a CSV file. Saves CSV to disk or returns as string.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anton-bot/objects-to-csv.git"
+    "url": "git+https://github.com/piyushimraw/objects-to-csv.git"
   },
   "keywords": [
     "csv",
@@ -22,7 +22,7 @@
     "json2csv",
     "array-to-csv"
   ],
-  "author": "Anton Ivanov <anton@ivanov.hk>",
+  "author": "Piyush Shrivastava",
   "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/anton-bot/objects-to-csv/issues"
